--- a/lanchonete_php/css/style.css
+++ b/lanchonete_php/css/style.css
@@ -54,7 +54,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 20px;
+    padding: 1rem 40px;
+    flex-wrap: wrap;
+
 }
 
 .logo {
