--- a/lanchonete_php/css/style.css
+++ b/lanchonete_php/css/style.css
@@ -91,7 +91,8 @@ body {
 }
 
 .nav-link {
-    color: var(--text-color);
+    color: var(--light-gray);
+    background-color: var(--accent-color);
     text-decoration: none;
     font-weight: 500;
     padding: 10px 15px;
@@ -100,7 +101,7 @@ body {
 }
 
 .nav-link:hover {
-    background: var(--accent-color);
+    background: var(--primary-color);
     color: var(--secondary-color);
     transform: translateY(-2px);
 }
